fix small bug preference page

--- a/src/main/webapp/pokestyle.css
+++ b/src/main/webapp/pokestyle.css
@@ -142,6 +142,7 @@
     cursor: pointer;
     text-transform: uppercase;
     font-weight: bold;
+    margin-top: 15px;
 }
 
 .registration-section button:hover {
